--- a/.gitignore
+++ b/.gitignore
@@ -161,53 +161,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# csv data and pdf files
-*.csv
-
-# data files
-files*/
-data*/
-
-# notebooks
-notebooks*/
-
-# outputs
-*output/
-*outputs*/
-
-# tmp directory
-tmp*/
-
-# results
-results*/
-saved_results*/
-visualizations*/
-
-# synthetic data copy
-*old*/
-
-# model checkpoints
-checkpoints*/
-*.pth
-
-# logs
-logs*/
-
-# experiments
-experiments*/
-
-# archive
-archive*/
-
-# .pt files
-*.pt
-
-gcn_gan_original_working/
-tmp/
-model/
-.codegpt
-
-
-paper/
-thesis/
-proofs/
+CLAUDE.md
